kubernetes/redemption-api/ingress/guestbook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ingress
  namespace: default  # Matches the namespace where your accor app lives
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: guestbook.waiyan.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: accor-helm-guestbook  # Matches your live SVC resource name
            port:
              number: 80
